--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -11,19 +11,22 @@
     <h2>My Profile</h2>
     <p th:text="${name}"></p>
     <p th:text="${skintype}"></p>
-<!--    <p th:text="${manipedi}"></p>-->
+    <p th:text="${manipedi}"></p>
 
 </div>
 <div id = "servicesMenu">
     <h2>Menu of Available Services</h2>
-
-    <table>
-        <th:block th:each="facial : ${appropriateFacials}">
-            <tr>
-                <td th:text="${facial}"></td>
-            </tr>
-        </th:block>
-    </table>
+    <div>
+        <h3>Facial Treatments</h3>
+        <p>Our estheticians recommend the following for your skin type:</p>
+        <table>
+            <th:block th:each="service : ${appropriateFacials}">
+                <tr>
+                    <td th:text="${service}"></td>
+                </tr>
+            </th:block>
+        </table>
+    </div>
 
     <div th:if='${manipedi.equals("manicure")}'>
         <h3>Manicure</h3>
